<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questions">


   <ImageView
       android:id="@+id/questions_img"
       android:layout_width="280dp"
       android:layout_height="89dp"
       android:contentDescription="@string/qt"
       android:scaleType="fitXY"
       app:srcCompat="@drawable/ques" />

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recyclerView"
       android:layout_width="match_parent"
       android:layout_height="500dp"
       android:layout_marginTop="90dp"
       android:orientation="vertical"
       android:padding="5dp"
       android:scrollbars="horizontal"
       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="70dp"
       android:layout_marginBottom="0dp"
       android:layout_marginTop="600dp">

      <Button
          android:id="@+id/submit"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:text="@string/submit"
          android:textColor="#FFFFFF"
          android:textSize="35sp"
          android:textStyle="bold"
          app:cornerRadius="12dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.0" />
   </androidx.constraintlayout.widget.ConstraintLayout>

   <ImageView
       android:id="@+id/timer"
       android:layout_width="70dp"
       android:layout_height="45dp"
       android:layout_marginStart="285dp"
       android:layout_marginTop="2dp"
       android:contentDescription="@string/timer"
       android:src="@drawable/ic_timer" />

   <TextView
       android:id="@+id/timertext"
       android:layout_width="75dp"
       android:layout_height="42dp"
       android:layout_marginStart="282dp"
       android:layout_marginTop="47dp"
       android:textSize="25sp"
       android:textStyle="bold"
       tools:text="00:00" />
</FrameLayout>