<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_screen">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6B1B1"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:layout_marginBottom="19dp"
            android:fontFamily="sans-serif-medium"
            android:rotation="0"
            android:rotationY="0"
            android:text="@string/quiz"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:fontFamily="sans-serif-medium"
            android:rotation="0"
            android:rotationY="0"
            android:text="@string/app"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.779"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="Enter the name"
            app:boxStrokeColor="#FFFFFF"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="3dp"
            app:endIconTint="#FFFFFF"
            app:hintTextColor="#FAFAFA"
            app:layout_constraintBottom_toTopOf="@+id/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name"
            app:startIconTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="@string/play"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#040404"
            android:textSize="40sp"
            android:textStyle="bold"
            app:backgroundTint="#FFEB3B"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name"
            app:layout_constraintVertical_bias="0.581" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>